Licensing Portal: fix Billing page design on mobile
The Billing Summary was too compact for scale. Also the Cost info was duplicated, appearing on the summary and on the details below.

--- a/client/jetpack-cloud/sections/partner-portal/billing-details/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/billing-details/style.scss
@@ -5,6 +5,8 @@
 	&__row {
 		display: grid;
 		grid-template-columns: calc( 66% - 12px ) calc( 34% - 12px );
+		direction: rtl;
+		transform: rotate( 180deg );
 		grid-template-areas:
 			'product assigned'
 			'subtotal unassigned';
@@ -13,14 +15,32 @@
 		font-size: 1.25rem;
 
 		@include break-xlarge() {
+			direction: ltr;
+			transform: rotate( 0 );
 			grid-template-columns: 1fr 150px 150px 150px;
-			grid-template-areas:
-				'product assigned unassigned subtotal';
+			grid-template-areas: 'product assigned unassigned subtotal';
 		}
 
 		&--summary {
 			grid-template-areas: none;
 			grid-gap: 8px 24px;
+		}
+
+		> * {
+			direction: ltr;
+			transform: rotate( 180deg );
+
+			@include break-xlarge() {
+				transform: rotate( 0 );
+			}
+		}
+
+		> :nth-child( even ) {
+			text-align: right;
+
+			@include break-xlarge() {
+				text-align: left;
+			}
 		}
 	}
 
